--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,5 @@ yarn-debug.log*
 yarn-error.log*
 
 
-src\Images\Arkam_trailer.mp4
-src\Images\VirtualRealityVideo.mp4
+Arkam_trailer.mp4
+VirtualRealityVideo.mp4
